fixed mockcatalog method